--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
 python: 
 - 3.9
+install:
+  - pip install -r requirements.txt
 script: 
-- test_ejemplo
+  - pytest
+  - test_ejemplo
